# football_stats

./: .gitignore  Cargo.toml  extract_teams.py
output/: QB_Stats_Michigan_vs_Alabama_Week_1.csv
output/Alabama/week_1/: Defensive_Stats_Alabama_vs_Florida State_Week_1.csv  QB_Stats_Alabama_vs_Florida_State_Week_1.csv  RB_Stats_Alabama_vs_Florida State_Week_1.csv  WR_TE_Stats_Alabama_vs_Florida State_Week_1.csv
output/Arizona State/week_1/: Defensive_Stats_Arizona State_vs_Northern Arizona_Week_1.csv  QB_Stats_Arizona_State_vs_Northern_Arizona_Week_1.csv  RB_Stats_Arizona State_vs_Northern Arizona_Week_1.csv  WR_TE_Stats_Arizona State_vs_Northern Arizona_Week_1.csv
output/Auburn/week_1/: Defensive_Stats_Auburn_vs_Baylor_Week_1.csv  QB_Stats_Auburn_vs_Baylor_Week_1.csv  RB_Stats_Auburn_vs_Baylor_Week_1.csv  WR_TE_Stats_Auburn_vs_Baylor_Week_1.csv
output/Baylor/week_1/: Defensive_Stats_Baylor_vs_Auburn_Week_1.csv  QB_Stats_Baylor_vs_Auburn_Week_1.csv  RB_Stats_Baylor_vs_Auburn_Week_1.csv  WR_TE_Stats_Baylor_vs_Auburn_Week_1.csv
output/Clemson/week_1/: Defensive_Stats_Clemson_vs_LSU_Week_1.csv  QB_Stats_Clemson_vs_LSU_Week_1.csv  RB_Stats_Clemson_vs_LSU_Week_1.csv  WR_TE_Stats_Clemson_vs_LSU_Week_1.csv
output/Florida State/week_1/: Defensive_Stats_Florida State_vs_Alabama_Week_1.csv  QB_Stats_Florida_State_vs_Alabama_Week_1.csv  RB_Stats_Florida State_vs_Alabama_Week_1.csv  (+1 more)
src/: api.rs  college_teams.rs  constants.rs  fetch_teams.rs  game_stats.rs  main.rs  models.rs  position_stats.rs  relevant_college_teams.rs  test_api.rs
(+32 files in other folders)
