[package]
name = "football_stats"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
urlencoding = "2.1.3"
